[package]
name = "edit_tree"
version = "0.1.0"
authors = ["Tobias Pütz <tobias.puetz@uni-tuebingen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "edit_tree"

[dependencies]
lazy_static = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
seqalign = "0.2.1"