[package]
name = "edit_tree"
version = "0.2.0"
authors = ["Tobias Pütz <tobias.puetz@uni-tuebingen.de>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Edit trees in rust."
keywords = ["lemmatization","sequence","transduction","alignment"]
repository = "https://github.com/twuebi/edit_tree"
documentation = "https://github.com/twuebi/edit_tree"
homepage = "https://github.com/twuebi/edit_tree"

[lib]
name = "edit_tree"

[dependencies]
lazy_static = "1.1"
serde = { version = "1", features = ["derive"] }
seqalign = "0.2"
